[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://SpaceLevel/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/StatusEffects.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpaceLevel/Explosion/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://SpaceLevel/SpacePlayer/Player/Spaceships.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hit"

[sub_resource type="Animation" id=3]
resource_name = "Idle"

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 16.2987, -4.82333e-13 )
rotation = -3.14159
scale = Vector2( 1.35339, 1.19768 )
texture = ExtResource( 7 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.388941, 0.417805 )
scale = Vector2( 6.6576, 5.9444 )
polygon = PoolVector2Array( -1.68872, 0.0608537, -1.56022, -0.868255, -1.2711, -1.47575, 1.20251, -2.90515, 3.93311, -4.22734, 4.09374, 4.31332, -1.1426, 1.56172 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = -0.675896
margin_top = -29.9584
margin_right = -0.675896
margin_bottom = -29.9584
rect_scale = Vector2( 0.243455, -0.189865 )

[node name="StatusEffects" parent="." instance=ExtResource( 3 )]

[node name="Explosion" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )
anims/Hit = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -14.1703, -0.132435 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
